--- a/Melqui/html/index.html
+++ b/Melqui/html/index.html
@@ -7,7 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/font/sf-fedora.shadow.ttf">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">    
+<link rel="stylesheet" href="./CSS/font/sf-fedora.shadow.ttf">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/menu.css">
     <link rel="stylesheet" href="./CSS/logo.css">
@@ -15,12 +18,15 @@
     <link rel="stylesheet" href="./CSS/home.css">
     <link rel="stylesheet" href="./CSS/sobre-artista.css">
     <link rel="stylesheet" href="./CSS/section-title.css">
+    <link rel="stylesheet" href="./CSS/secao2.css">
+    <link rel="stylesheet" href="./CSS/img.css">
+    <link rel="stylesheet" href="./CSS/">
     <title>Melqui- JOJO</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            Jojo bizarre adventure
+            Jojo part4
         </div>
         <nav>
             <ul class="menu">
@@ -39,7 +45,11 @@
     <main>
         <section class="home" id="home"></section>
         <section class="sobre-artista" id="sobre-artista"></section>
-        <h2 class="section-title">Sobre o artista</h2>
+        <h2 class="section-title">Jojo bizarre adventure</h2>
+           <div class="secao2">
+            <h2 class="sobre-autor">Sobre o artista</h2>
+            <img src="./img/fundo jojo 1.png" alt=""  class="familia-part4">
+        </div>
     </main>
     <footer></footer>
 </body>
