--- a/Melqui/html/index.html
+++ b/Melqui/html/index.html
@@ -47,8 +47,14 @@
         <section class="sobre-artista" id="sobre-artista"></section>
         <h2 class="section-title">Jojo bizarre adventure</h2>
            <div class="secao2">
-            <h2 class="sobre-autor">Sobre o artista</h2>
             <img src="./img/fundo jojo 1.png" alt=""  class="familia-part4">
+            <h2 class="sobre-autor">Sobre o artista</h2>
+            <h3 class="descri-autor">Hirohiko Araki é um artista de mangá japonês conhecido por sua série JoJo's Bizarre Adventure,
+                 publicada pela primeira vez na revista Weekly Shōnen Jump em 1987,
+                  que até hoje já vendeu mais de 100 milhões de cópias só no Japão e que também é conhecida por suas frequentes referências ao rock ocidental e à Itália,
+                   ambos dos quais Araki supostamente gosta muito. Ele fez sua estreia sob o nome Toshiyuki Araki em 1980 com seu one-shot Poker Under Arms,
+                    e começou sua carreira profissional com as séries Cool Shock B.T., Baoh e The Gorgeous Irene.
+</h3>
         </div>
     </main>
     <footer></footer>
