--- a/Melqui/html/index.html
+++ b/Melqui/html/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./CSS/section-title.css">
     <link rel="stylesheet" href="./CSS/secao2.css">
     <link rel="stylesheet" href="./CSS/img.css">
-    <link rel="stylesheet" href="./CSS/">
+    <link rel="stylesheet" href="./CSS/partManga.css">
     <title>Melqui- JOJO</title>
 </head>
 <body>
@@ -43,19 +43,36 @@
         </nav>
     </header>
     <main>
-        <section class="home" id="home"></section>
-        <section class="sobre-artista" id="sobre-artista"></section>
-        <h2 class="section-title">Jojo bizarre adventure</h2>
-           <div class="secao2">
-            <img src="./img/fundo jojo 1.png" alt=""  class="familia-part4">
-            <h2 class="sobre-autor">Sobre o artista</h2>
-            <h3 class="descri-autor">Hirohiko Araki é um artista de mangá japonês conhecido por sua série JoJo's Bizarre Adventure,
-                 publicada pela primeira vez na revista Weekly Shōnen Jump em 1987,
-                  que até hoje já vendeu mais de 100 milhões de cópias só no Japão e que também é conhecida por suas frequentes referências ao rock ocidental e à Itália,
-                   ambos dos quais Araki supostamente gosta muito. Ele fez sua estreia sob o nome Toshiyuki Araki em 1980 com seu one-shot Poker Under Arms,
-                    e começou sua carreira profissional com as séries Cool Shock B.T., Baoh e The Gorgeous Irene.
-</h3>
-        </div>
+        <section class="home" id="home">
+            <h2 class="section-title">Jojo bizarre adventure</h2>
+        </section>
+        <section class="sobre-artista" id="sobre-artista">
+            <div class="sobre-autor-texto">
+                <h1 class="sobre-autor">Sobre o artista</h1>
+                <p class="descri-autor">Hirohiko Araki é um artista de mangá japonês conhecido por sua série JoJo's Bizarre Adventure,
+                     publicada pela primeira vez na revista Weekly Shōnen Jump em 1987,
+                      que até hoje já vendeu mais de 100 milhões de cópias só no Japão e que também é conhecida por suas frequentes referências ao rock ocidental e à Itália,
+                       ambos dos quais Araki supostamente gosta muito. Ele fez sua estreia sob o nome Toshiyuki Araki em 1980 com seu one-shot Poker Under Arms,
+                        e começou sua carreira profissional com as séries Cool Shock B.T., Baoh e The Gorgeous Irene.
+                </p>
+            </div>
+            <img class="araki" src="./img/araki 1.png" alt="foto">
+        </section>
+        <section class="sobre-manga" id="sobre-manga">
+            <div class="sobre-manga-div">
+                <h1 class="manga">Sobre o manga</h1>
+                <p class="descri-manga">A história de JoJo está divida em duas continuidades.
+                     A primeira inclui as Partes 1 à 6, detalhadas na Weekly Shonen Jump de 1987 à 2003,
+                      enquanto a segunda inclui as Partes 7 e 8, detalhadas na revista seinen Ultra Jump de 2004 até o presente. 
+                      A trama através dessas é fornecida em arcos de múltiplos capítulos detalhando conflitos precários e melodramáticos entre partidos definidos ambos por poderes sobrenaturais,
+                       principalmente pelo versátil fenônemo de Stands, e ambições exclusivas, atitudes ou padrões morais. 
+                       Esses arcos variam em tom, alternando aventura, suspense, mistério e terror; sempre através de ação, e frequentemente embutida com comédia. 
+                       Tipicamente, uma corrida emerge dentre os heróis de uma história para interceptar um poderoso antagonista central.
+                </p>
+            </div>
+            <img class="capa" src="./img/capa com pessoal.png" alt="capa">
+        </section>
+        
     </main>
     <footer></footer>
 </body>
